# vaultrix

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SUMMARY.md  blog-post-v2.md  blog-post.md  demo.py  docker-compose.yml  one-pager.html  pyproject.toml  requirements.txt  slides-cn.html  slides.html  submission.docx
.github/workflows/: deploy.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  PHASE2_SAFEHUB.md  PROJECT_STATUS.md  QUICKSTART.md  blog-control-settings.md
examples/: basic_usage.py  cli_demo.py  custom_permissions.py  multi_agent_demo.py
kubernetes/: deployment.yaml
scripts/: deploy.sh  fill_submission.py  init_sandbox.sh  quick-deploy.sh
tests/: __init__.py  test_control.py  test_permissions.py  test_sandbox.py  test_security.py
vaultrix/: __init__.py  cli.py
vaultrix/control/: __init__.py  base.py  registry.py
vaultrix/control/browser_control/: __init__.py  main_tasks.py  scoring.py  setting.py  side_tasks.py
vaultrix/control/collusion_net/: __init__.py  main_tasks.py  scoring.py  setting.py  side_tasks.py
vaultrix/control/rogue_interp/: __init__.py  main_tasks.py  scoring.py  setting.py  side_tasks.py
vaultrix/control/sandbox_breaker/: __init__.py  main_tasks.py  scoring.py  setting.py  side_tasks.py
vaultrix/control/vulnforge/: __init__.py  main_tasks.py  scoring.py  setting.py  side_tasks.py
vaultrix/core/: __init__.py  config.py  hitl.py  validation.py
vaultrix/core/agent/: __init__.py  agent.py  loop.py  state.py
vaultrix/core/encryption/: __init__.py  manager.py
vaultrix/core/multi_agent/: __init__.py  channel.py  executor.py  handoff.py  orchestrator.py  policy.py
vaultrix/core/permissions/: __init__.py  manager.py  models.py
vaultrix/core/resilience/: __init__.py  circuit_breaker.py  fallback.py
vaultrix/core/sandbox/: __init__.py  backend.py  docker_backend.py  local_backend.py  macos_backend.py  manager.py  models.py
vaultrix/core/tools/: __init__.py  base.py  builtins.py
vaultrix/safehub/: __init__.py  manifest.py  runner.py  signing.py
vaultrix/safehub/scanner/: __init__.py  analyzer.py
vaultrix/ui/: __init__.py
vaultrix/ui/dashboard/: __init__.py  app.py
vaultrix/ui/dashboard/static/: app.js  styles.css
vaultrix/ui/dashboard/templates/: agent.html  index.html
website/: index.html
